--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-add/applicants-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-add/applicants-add.component.html
@@ -122,7 +122,7 @@
 
 
       <div class="ui-g-12">
-        <button pButton type="button" label="Back" (click)="backClicked()"></button>
+        <button pButton icon="fa-arrow-circle-left" type="button" label="Back" (click)="backClicked()" class="ui-button-secondary"></button>
         <button pButton type="submit" label="Save application" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
       </div>
 
