--- a/UI-Angular/JobsAdmin/src/app/jobs/jobs-add/jobs-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/jobs/jobs-add/jobs-add.component.html
@@ -109,7 +109,7 @@
       </div>
 
        <div class="ui-g-12">
-        <button pButton type="button" label="Back" (click)="backClicked()"></button>
+          <button pButton icon="fa-arrow-circle-left" type="button" label="Back" (click)="backClicked()" class="ui-button-secondary"></button>
         <button pButton type="submit" label="Save job" class="ui-button-info" [disabled]="jobForm.invalid"></button>
       </div>
 
@@ -117,3 +117,4 @@
 
   </form>
 </div>
+
