--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-add/applicants-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-add/applicants-add.component.html
@@ -123,7 +123,7 @@
 
       <div class="ui-g-12">
         <button pButton icon="fa-arrow-circle-left" type="button" label="Back" (click)="backClicked()" class="ui-button-secondary"></button>
-        <button pButton type="submit" label="Save application" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
+        <button pButton type="submit" icon="fa-save" label="Save application" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
       </div>
 
     </div>
