--- a/UI-Angular/JobsAdmin/src/app/jobs/jobs-add/jobs-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/jobs/jobs-add/jobs-add.component.html
@@ -110,7 +110,7 @@
 
        <div class="ui-g-12">
           <button pButton icon="fa-arrow-circle-left" type="button" label="Back" (click)="backClicked()" class="ui-button-secondary"></button>
-        <button pButton type="submit" label="Save job" class="ui-button-info" [disabled]="jobForm.invalid"></button>
+        <button pButton type="submit" icon="fa-save" label="Save job" class="ui-button-info" [disabled]="jobForm.invalid"></button>
       </div>
 
     </div>
