--- a/UI-Angular/JobsAdmin/src/app/schedules/schedules-add/schedules-add.component.html
+++ b/UI-Angular/JobsAdmin/src/app/schedules/schedules-add/schedules-add.component.html
@@ -71,7 +71,7 @@
 
       <div class="ui-g-12">
           <button pButton icon="fa-arrow-circle-left" type="button" label="Back" (click)="backClicked()" class="ui-button-secondary"></button>
-        <button pButton type="submit" label="Save" class="ui-button-info" [disabled]="scheduleForm.invalid"></button>
+        <button pButton type="submit" icon="fa-save" label="Save" class="ui-button-info" [disabled]="scheduleForm.invalid"></button>
       </div>
 
     </div>
