API: Update of data sample on database.

--- a/UI-Angular/JobsWeb/src/app/applicant/applicant-add/applicant-add.component.html
+++ b/UI-Angular/JobsWeb/src/app/applicant/applicant-add/applicant-add.component.html
@@ -127,8 +127,8 @@
 
 
       <div class="ui-g-12">
-        <button pButton type="button" label="Back" (click)="backClicked()"></button>
-        <button pButton type="submit" label="Apply" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
+        <button pButton type="button" label="Back" (click)="backClicked()" class="ui-button-secondary"></button>
+        <button pButton type="submit" icon="fa-save" label="Apply" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
       </div>
 
     </div>
