API: Update the SQL code to add sample data.

--- a/UI-Angular/JobsAdmin/src/app/jobs/jobs-search/jobs-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/jobs/jobs-search/jobs-search.component.html
@@ -19,7 +19,7 @@
       <p-dataTable [value]="jobsweb" [responsive]="true" [rows]="15" [paginator]="true" emptyMessage="No jobs available." [globalFilter]="gb"
         #table>
 
-        <p-column field="title" header="Title" [sortable]="true"></p-column>
+        <p-column field="title" header="Title" [sortable]="true" styleClass="col-size-jobtitle"></p-column>
 
         <p-column field="position" header="Position" [sortable]="true"></p-column>
 
