Change all enviorament for Deploy API and Web

--- a/UI-Angular/JobsAdmin/src/assets/layout/css/layout.css
+++ b/UI-Angular/JobsAdmin/src/assets/layout/css/layout.css
@@ -343,7 +343,7 @@ a {
         background-color: #20d077;
         color: #038d4a; }
       .wrapper .sidebar ul li.yellow-badge > a .menuitem-badge {
-        background-color: #f9c85;
+        background-color: #007be5;
         color: #b58c2b; }
       .wrapper .sidebar ul .menuitem-badge {
         position: absolute;
